# Yip

./: .gitignore  Dockerfile  README.md
backend/: .env  .gitignore  Cargo.toml
backend/migrations/2020-05-02-031231_create_user/: up.sql
backend/migrations/2020-05-04-195533_create_reviews/: up.sql
backend/migrations/2020-05-05-211334_create_kennels/: down.sql  up.sql
backend/migrations/2020-05-09-181529_create_comments/: up.sql
backend/src/: auth.rs  db.rs  main.rs  schema.rs  search.rs
backend/src/comments/: handlers.rs  mod.rs
backend/src/error/: mod.rs
backend/src/kennels/: handlers.rs  mod.rs
backend/src/messages/: handlers.rs  mod.rs
backend/src/reports/: handlers.rs  mod.rs
backend/src/reviews/: handlers.rs  mod.rs  reviewmultipart.rs  search.rs
backend/src/users/: handlers.rs  mod.rs
backend/static/pages/: index.html  main.js
backend/static/reviewpics/: 05bd5925-247d-4521-a2c6-644d6c8bf5d4undefined
frontend/: .gitignore  package-lock.json  package.json  webpack.config.js
frontend/src/: index.js
frontend/src/css/: App.css
frontend/src/js/: App.js
frontend/src/js/components/: Attributes.js  BackendHelpers.js  CommentCard.js  CreateKennel.js  CreateReview.js  EditKennel.js  EditReview.js  Home.js  ImageLoader.js  Inbox.js  InboxUser.js  InputTag.js  Kennel.js  KennelCard.js  Login.js  Message.js  Profile.js  RecoverPassword.js  Register.js  Report.js  Review.js  ReviewCard.js  RuleCard.js  SearchResults.js  Sidebar.js  TagCard.js  TransferOwnership.js  UserCard.js  YipNavBar.js
