[package]
name = "backend"
version = "0.1.0"
authors = ["Sachinda"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "0.4.7", default-features = false }
diesel = { version = "1.3", features = ["postgres", "uuid", "serde_json", "chrono"] }
dotenv = "0.9.0"
r2d2-diesel = "1.0"
r2d2 = "0.8"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
bcrypt = "0.7"
jsonwebtoken = "7"
cookie = "0.13"
uuid = { version = "0.6", features = ["serde", "v4"] }
chrono = { version = "0.4.11", features = ["serde"] }
multipart = { version = "0.16.1", default-features = false, features = ["server"]}
json = "0.12.4"
rustc-serialize = "0.3.24"
radix-heap = "0.3.8"
ordered-float = "1.0.2"
priority-queue = "0.7.0"
ws = "0.9.1"

[dependencies.rocket_contrib]
version = "0.4.4"
default-features = false
features = ["serve", "json"]